--- a/integration/index.html
+++ b/integration/index.html
@@ -1,24 +1,48 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="utf-8">
+    <title>O'Blog</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Purecss -->
+    <link rel="stylesheet" href="css/pure.min.css">
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,700;1,300&display=swap" rel="stylesheet">
+    <!-- CSS Maison -->
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <div class="pure-g">
+      <header class="banner pure-u-1 pure-u-md-1-4 pure-u-xl-1-6">
+        <a href="/" title="Retour à l'accueil">
+          <img class="banner-logo pure-img" src="images/logo.svg" alt="Logo de O'Blog">
+        </a>
+        <nav class="banner-menu pure-menu">
+          <ul class="pure-menu-list">
+            <li class="pure-menu-item"><a target="_blank" href="https://oclock.io" class="pure-menu-link">O'clock</a></li>
+            <li class="pure-menu-item"><a target="_blank" href="https://expressjs.com" class="pure-menu-link">Express</a></li>
+            <li class="pure-menu-item"><a target="_blank" href="http://purecss.io" class="pure-menu-link">Pure</a></li>
+          </ul>
+        </nav>
+      </header>
       <main class="content pure-u-1 pure-u-md-3-4 pure-u-xl-5-6">
         <h1 class="content-title">Les actualités du blog</h1>
         <div class="pure-g">
           <article class="card pure-u-1 pure-u-lg-1-2 pure-u-xl-1-3">
             <header>
-              <img src="/img/<%= foundArticle.img %>" alt="<%= foundArticle.img %>">
-              <h2>
-                  <% = foundArticle.title %>
-              </h2>
+              <img class="card-img pure-img" src="images/laptop.jpg" alt="Le code css de notre site">
+              <h2>Ivre, il refait tous les challenges en une nuit.</h2>
               <div class="card-meta">
-                 Par <a href="#">
-                  <% = foundArticle.author %>
-                    </a> 
-                dans la catégorie <a href="#">
-      <% = foundArticle.category %>
-      </a>
+                Par <a href="#">Ben O'clock</a> 
+                dans la catégorie <a href="#">Histoire</a>
               </div>
             </header>
             <p>
-              <% foundArticle.text%>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam dolore, minus debitis facere sit
+              excepturi impedit consequuntur deleniti tenetur culpa enim corrupti et architecto blanditiis odio iusto,
+              voluptatibus temporibus ab fugit pariatur. Asperiores ducimus reiciendis quibusdam obcaecati animi
+              pariatur similique.
             </p>
             <a class="card-action pure-button" href="article.html">Lire l'article</a>
           </article>
